
  MAHOUT-1291: MahoutDriver yields cosmetically suboptimal exception when bin/mahout runs without args, on some Hadoop versions (srowen)

  MAHOUT-1290: Issue when running Mahout Recommender Demo (Helder Garay Martins via smarthi)

  MAHOUT-1287: classifier.sgd.CsvRecordFactory incorrectly parses CSV format (Alex Franchuk via smarthi)

  MAHOUT-1275: Dropped bz2 distribution format for source and binaries (sslavic)

Release 0.8 - 2013-07-25

  MAHOUT-1272: Parallel SGD matrix factorizer for SVDrecommender (Peng Cheng via ssc)

  MAHOUT-1271: classify-20newsgroups.sh fails during the seqdirectory step (smarthi)
  
  MAHOUT-1269: Cleanup deprecated Lucene 3.x API calls in lucene2seq utility unit tests (smarthi)

  MAHOUT-833: Make conversion to sequence files map-reduce (Josh Patterson, smarthi)

  MAHOUT-1268: Wrong output directory for CVB (Mark Wicks via ssc)

  MAHOUT-1264: Performance optimizations in RecommenderJob (ssc)

  MAHOUT-1262: Cleanup LDA code (ssc)

  MAHOUT-1255: Fix for weights in Multinomial sometimes overflowing in BallKMeans (dfilimon)

  MAHOUT-1254: Final round of cleanup for StreamingKMeans (dfilimon)

  MAHOUT-1263: Serialise/Deserialise Lambda value for OnlineLogisticRegression (Mike Davy via smarthi)  

  MAHOUT-1258: Another shot at findbugs and checkstyle (ssc)

  MAHOUT-1253: Add experiment tools for StreamingKMeans, part 1 (dfilimon)

  MAHOUT-884:  Matrix Concatenate Utility (Lance Norskog via smarthi)

  MAHOUT-1250: Deprecate unused algorithms (ssc)

  MAHOUT-1251: Optimize MinHashMapper (ssc)

  MAHOUT-1211: Disabled swallowing of IOExceptions is Closeables.close for writers (dfilimon)

  MAHOUT-1164: Make ARFF integration generate meta-data in JSON format (Marty Kube via ssc)

  MAHOUT-1164: Make ARFF integration generate meta-data in JSON format (Marty Kube via ssc)

  MAHOUT-1163: Make random forest classifier meta-data file human readable (Marty Kube via ssc)
