@@ -18,15 +18,10 @@
 package org.apache.mahout.common;
 
 import com.google.common.collect.Lists;
-
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Method;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.TreeMap;
-
+import com.google.common.collect.Maps;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.io.NullWritable;
+import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.mapreduce.MapContext;
 import org.apache.hadoop.mapreduce.Mapper;
 import org.apache.hadoop.mapreduce.RecordWriter;
@@ -34,19 +29,63 @@ import org.apache.hadoop.mapreduce.ReduceContext;
 import org.apache.hadoop.mapreduce.Reducer;
 import org.apache.hadoop.mapreduce.TaskAttemptContext;
 import org.apache.hadoop.mapreduce.TaskAttemptID;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-public final class DummyRecordWriter<K, V> extends RecordWriter<K, V> {
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.DataInputStream;
+import java.io.DataOutputStream;
+import java.io.IOException;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Method;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
-  private final Map<K, List<V>> data = new TreeMap<K, List<V>>();
+public final class DummyRecordWriter<K extends Writable, V extends Writable> extends RecordWriter<K, V> {
+
+  private static final Logger log = LoggerFactory.getLogger(DummyRecordWriter.class);
+
+  private final Map<K, List<V>> data = Maps.newHashMap();
 
   @Override
   public void write(K key, V value) {
+    // if the user reuses the same writable class, we need to create a new one
+    // otherwise the Map content will be modified after the insert
+    try {
+      if (!(key instanceof NullWritable)) {
+        K newKey = (K) key.getClass().newInstance();
+        cloneWritable(key, newKey);
+        key = newKey;
+      }
+      V newValue = (V) value.getClass().newInstance();
+      cloneWritable(value, newValue);
+      value = newValue;
+    } catch (InstantiationException e) {
+      log.error(e.getMessage());
+    } catch (IllegalAccessException e) {
+      log.error(e.getMessage());
+    } catch (IOException e) {
+      log.error(e.getMessage());
+    }
+
     List<V> points = data.get(key);
     if (points == null) {
       points = Lists.newArrayList();
       data.put(key, points);
     }
     points.add(value);
+  }
+
+  private void cloneWritable(Writable from, Writable to) throws IOException {
+    ByteArrayOutputStream baos = new ByteArrayOutputStream();
+    DataOutputStream dos = new DataOutputStream(baos);
+    from.write(dos);
+    dos.close();
+    ByteArrayInputStream bais = new ByteArrayInputStream(baos.toByteArray());
+    DataInputStream dis = new DataInputStream(bais);
+    to.readFields(dis);
   }
 
   @Override
@@ -101,13 +140,13 @@ public final class DummyRecordWriter<K, V> extends RecordWriter<K, V> {
     }
   }
 
-  @SuppressWarnings({ "unchecked", "rawtypes" })
+  @SuppressWarnings({"unchecked", "rawtypes"})
   private static <K1, V1, K2, V2> Mapper<K1, V1, K2, V2>.Context buildNewMapperContext(
-      Configuration configuration, RecordWriter<K2, V2> output) throws Exception {
+    Configuration configuration, RecordWriter<K2, V2> output) throws Exception {
     Class<?> mapContextImplClass = Class.forName("org.apache.hadoop.mapreduce.task.MapContextImpl");
     Constructor<?> cons = mapContextImplClass.getConstructors()[0];
     Object mapContextImpl = cons.newInstance(configuration,
-        new TaskAttemptID(), null, output, null, new DummyStatusReporter(), null);
+      new TaskAttemptID(), null, output, null, new DummyStatusReporter(), null);
 
     Class<?> wrappedMapperClass = Class.forName("org.apache.hadoop.mapreduce.lib.map.WrappedMapper");
     Object wrappedMapper = wrappedMapperClass.getConstructor().newInstance();
@@ -115,20 +154,20 @@ public final class DummyRecordWriter<K, V> extends RecordWriter<K, V> {
     return (Mapper.Context) getMapContext.invoke(wrappedMapper, mapContextImpl);
   }
 
-  @SuppressWarnings({ "unchecked", "rawtypes" })
+  @SuppressWarnings({"unchecked", "rawtypes"})
   private static <K1, V1, K2, V2> Mapper<K1, V1, K2, V2>.Context buildOldMapperContext(
-      Mapper<K1, V1, K2, V2> mapper, Configuration configuration,
-      RecordWriter<K2, V2> output) throws Exception {
+    Mapper<K1, V1, K2, V2> mapper, Configuration configuration,
+    RecordWriter<K2, V2> output) throws Exception {
     Constructor<?> cons = getNestedContextConstructor(mapper.getClass());
     // first argument to the constructor is the enclosing instance
     return (Mapper.Context) cons.newInstance(mapper, configuration,
-        new TaskAttemptID(), null, output, null, new DummyStatusReporter(), null);
+      new TaskAttemptID(), null, output, null, new DummyStatusReporter(), null);
   }
 
-  @SuppressWarnings({ "unchecked", "rawtypes" })
+  @SuppressWarnings({"unchecked", "rawtypes"})
   private static <K1, V1, K2, V2> Reducer<K1, V1, K2, V2>.Context buildNewReducerContext(
-      Configuration configuration, RecordWriter<K2, V2> output, Class<K1> keyClass,
-      Class<V1> valueClass) throws Exception {
+    Configuration configuration, RecordWriter<K2, V2> output, Class<K1> keyClass,
+    Class<V1> valueClass) throws Exception {
     Class<?> reduceContextImplClass = Class.forName("org.apache.hadoop.mapreduce.task.ReduceContextImpl");
     Constructor<?> cons = reduceContextImplClass.getConstructors()[0];
     Object reduceContextImpl = cons.newInstance(configuration,
@@ -148,26 +187,26 @@ public final class DummyRecordWriter<K, V> extends RecordWriter<K, V> {
     Method getReducerContext = wrappedReducerClass.getMethod("getReducerContext", ReduceContext.class);
     return (Reducer.Context) getReducerContext.invoke(wrappedReducer, reduceContextImpl);
   }
-  
-  @SuppressWarnings({ "unchecked", "rawtypes" })
+
+  @SuppressWarnings({"unchecked", "rawtypes"})
   private static <K1, V1, K2, V2> Reducer<K1, V1, K2, V2>.Context buildOldReducerContext(
-      Reducer<K1, V1, K2, V2> reducer, Configuration configuration,
-      RecordWriter<K2, V2> output, Class<K1> keyClass,
-      Class<V1> valueClass) throws Exception {
+    Reducer<K1, V1, K2, V2> reducer, Configuration configuration,
+    RecordWriter<K2, V2> output, Class<K1> keyClass,
+    Class<V1> valueClass) throws Exception {
     Constructor<?> cons = getNestedContextConstructor(reducer.getClass());
     // first argument to the constructor is the enclosing instance
     return (Reducer.Context) cons.newInstance(reducer,
-        configuration,
-        new TaskAttemptID(),
-        new MockIterator(),
-        null,
-        null,
-        output,
-        null,
-        new DummyStatusReporter(),
-        null,
-        keyClass,
-        valueClass);
+      configuration,
+      new TaskAttemptID(),
+      new MockIterator(),
+      null,
+      null,
+      output,
+      null,
+      new DummyStatusReporter(),
+      null,
+      keyClass,
+      valueClass);
   }
 
   private static Constructor<?> getNestedContextConstructor(Class<?> outerClass) {
